# simst

./: .gitignore  LICENSE  README.md  download_models.sh  pyproject.toml
src/simst/: app.py  asr.py  async_utils.py  backend.py  mt.py
