[project]
name = "simst"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mattia Di Gangi", email = "mattiadg@users.noreply.github.com"},
]
dependencies = [
    "uvicorn>=0.30.1",
    "fastapi>=0.111.0",
    "faster-whisper>=1.0.3",
    "onnxruntime>=1.18.0",
    "numpy<2.0",
    "httpx>=0.27.0",
    "deepmultilingualpunctuation>=1.0.1",
    "ctranslate2>=4.3.1",
    "gradio>=4.37.2",
]
requires-python = ">=3.10.0"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = false
